objects/Error_Log__c.object
<CustomObject>
    <fields>
        <fullName>Account_Id__c</fullName>
        <label>Account Id</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Idl__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account Id</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Error Logs</relationshipLabel>
        <relationshipName>Error_Logs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Application__c</fullName>
        <label>Application</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Batch_IDL__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Batch ID</label>
        <referenceTo>SGRRenewalBatch__c</referenceTo>
        <relationshipLabel>Error Logs</relationshipLabel>
        <relationshipName>Error_Logs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Batch_Id__c</fullName>
        <label>Batch Id</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Class__c</fullName>
        <description>the CLass from which error is thrown.</description>
        <label>Class</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Error_Detail__c</fullName>
        <description>Detail of the exception occurred</description>
        <label>Error Detail</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Error_Message__c</fullName>
        <description>Message of the Exception</description>
        <label>Error Message</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Error_Severity__c</fullName>
        <description>Severity of the Exception</description>
        <label>Error Severity</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>High</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
                <value>
                    <fullName>Low</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Id__c</fullName>
        <formula>Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Line_Number__c</fullName>
        <description>Line number of the class on which error occurs</description>
        <label>Line Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Id__c</fullName>
        <label>Opportunity Id</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Idl__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity Id</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Error Logs</relationshipLabel>
        <relationshipName>Error_Logs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Origin__c</fullName>
        <description>Origin of the Exception</description>
        <label>Origin</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Renewal_Batch_Opty_IDL__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Renewal Batch Opty ID</label>
        <referenceTo>SGR_Renewal_Batch_Oppty__c</referenceTo>
        <relationshipLabel>Error Logs</relationshipLabel>
        <relationshipName>Error_Logs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Renewal_Batch_Opty_Id__c</fullName>
        <label>Renewal Batch Opty Id</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SObject_Name__c</fullName>
        <description>Name of the Sobject</description>
        <label>SObject Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Send_Email__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Should the exception mail be send or not.</description>
        <label>Send Email</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Shared_With__c</fullName>
        <description>This field is used by the custom sharing logic to indicate with whom was the failed record shared with.</description>
        <label>Shared With</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sharing_EventType__c</fullName>
        <description>This field will capture if the sharing event was delete or insert.</description>
        <label>Sharing Event Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sharing_sObjectId__c</fullName>
        <description>This field captures the sObject Id of the record that was going to be shared.</description>
        <label>Shared sObject Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Trigger__c</fullName>
        <description>Trigger from which error is thrown</description>
        <label>Trigger</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Error</fullName>
                </value>
                <value>
                    <fullName>info</fullName>
                </value>
                <value>
                    <fullName>Warning</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Error Log</label>
    <listViews>
        <fullName>debug</fullName>
        <columns>NAME</columns>
        <columns>OBJECT_ID</columns>
        <columns>Class__c</columns>
        <columns>Error_Detail__c</columns>
        <columns>Error_Message__c</columns>
        <columns>Error_Severity__c</columns>
        <columns>Line_Number__c</columns>
        <columns>Origin__c</columns>
        <columns>Trigger__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <filters>
            <field>OWNER.LAST_NAME</field>
            <operation>equals</operation>
            <value>Chen</value>
        </filters>
        <label>debug</label>
    </listViews>
    <listViews>
        <fullName>today</fullName>
        <columns>NAME</columns>
        <columns>OBJECT_ID</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>Class__c</columns>
        <columns>Error_Message__c</columns>
        <columns>Line_Number__c</columns>
        <columns>Origin__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>RECORDTYPE</columns>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>today</label>
    </listViews>
    <nameField>
        <displayFormat>ERR-{0000}</displayFormat>
        <label>Error Log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Error Logs</pluralLabel>
    <recordTypes>
        <fullName>Error_Log_Sharing</fullName>
        <active>true</active>
        <description>This record type captures the errors when performing sharing for users or groups via apex trigger logic.</description>
        <label>Error Log Sharing</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>